a1/brendan_gordon/TEST_PROGRAMS/invalidtype/eric_ditomasso/print.min
# this script tests that the print function properly type checks

var x: string;
var y: float;

print x - y;
